fix footnoet in unit 7

--- a/07-Introduction-to-probability.qmd
+++ b/07-Introduction-to-probability.qmd
@@ -383,7 +383,7 @@ $$P(X|\theta,N)$$
 [^07-introduction-to-probability-3]: 如果讀者知道一點微積分,我會用一種稍微精確方式解釋。如同離散機率函數涵蓋所有事件的機率，其值為必為正數且總和為1，連續機率函數涵蓋範圍內非零的機率密度且總和也是1。要計算代表事件a與b之間所有數值的發生機率，只要以密度函數計算兩者之間機率密度所佔面積的積分$\int_{a}^{b} p(x) dx$。若是讀者從未學過或已經忘記微積分,請不用擔心這個，本書的材料不需要懂微積分也能學習。
 
 
-我知道很多讀者走到這裡會想：怎麼又是一堆符號，能不用知道那麼多嗎？這本書是為不想學太多數學符號的讀者而設計的，所以接下來會直接談如何運用二項分佈計算機率。不過有些比較好學的讀者可能想知道細節，所以我將詳細公式說明寫在腳注^07-introduction-to-probability-3_1]。因為多數讀者沒興趣知道如何用公式計算機率，本書也不要求讀者要了解公式才能學如何計算，只要看看符合實驗條件 的二項分佈長什麼樣子。  
+我知道很多讀者走到這裡會想：怎麼又是一堆符號，能不用知道那麼多嗎？這本書是為不想學太多數學符號的讀者而設計的，所以接下來會直接談如何運用二項分佈計算機率。不過有些比較好學的讀者可能想知道細節，所以我將詳細公式說明寫在腳注[^07-introduction-to-probability-3_1]。因為多數讀者沒興趣知道如何用公式計算機率，本書也不要求讀者要了解公式才能學如何計算，只要看看符合實驗條件 的二項分佈長什麼樣子。  
 
 
 [^07-introduction-to-probability-3_1]: 二項分佈公式的 $X!$ 代表階乘(將1到$X$的所有整數相乘):$$P(X | \theta, N) = \displaystyle\frac{N!}{X!(N-X)!}\theta^X(1-\theta)^{N-X}$$ 如果這個公式對您來說没有太大意義,請不用擔心。 使用本書學習統計不需要知道這個公式。
