fix words about normal distribution

--- a/07-Introduction-to-probability.qmd
+++ b/07-Introduction-to-probability.qmd
@@ -514,7 +514,7 @@ ggplot(data = data.frame(x = seq(0, 10, 1)), aes(x)) +
 --->
 
 
-讓我們試著用直觀的方式瞭解常態分佈為何是連續隨機變數，首先看一下改變分佈的參數會改變什麼。@fig-fig7-6 並列平均值不同，但是標準差相同的常態分佈。讀者可以預期兩個分佈都具有相同的“寬度”，唯一區別是其中一個的最高點在左邊、另一個在右邊。兩者的其他特徵都是相同的。如果保持平均值不變、增加標準差的話,新的分佈最高點還是在同樣的位置,不過分佈曲線變得更寬,如同 @fig-fig7-7 的展示。留意一下分佈寬度變大時,最高點的高度會跟著降低。這是必然的,如同離散二項分佈的所有柱子，高度相加起來必須為1,常態分佈曲線覆蓋的面積也必須等於1。 除此之外，常態分佈還有一個重要特徵需要讀者知道：無論實際平均值和標準差是多少,從平均值向左右延伸1個標準差覆蓋了 $68.3\%$ 的面積；從平均值向左右延伸2個標準差覆蓋了 $95.4\%$ ；從平均值向左右延伸3個標準差覆蓋了 $99.7\%$ 。 請參考@fig-fig7-8和 @fig-fig7-9 的說明。
+讓我們試著用直觀的方式瞭解常態分佈為何是連續隨機變數，首先看一下改變分佈的參數會改變什麼。@fig-fig7-6 並列平均值不同，但是標準差相同的常態分佈。讀者可以預期兩個分佈都具有相同的“寬度”，唯一區別是其中一個的最高點在左邊、另一個在右邊。兩者的其他特徵都是相同的。如果保持平均值不變、增加標準差的話,新的分佈最高點還是在同樣的位置,不過分佈曲線變得更寬,如同 @fig-fig7-7 的展示。留意一下分佈寬度變大時,最高點的高度會跟著降低。這是必然的,如同離散二項分佈的所有柱子，高度相加起來必須為1,常態分佈曲線覆蓋的面積也必須等於1。 除此之外，常態分佈還有一個重要特徵需要讀者知道：無論實際平均值和標準差是多少,從平均值向左右延伸1個標準差覆蓋了 $68.3\%$ 的面積；從平均值向左右延伸2個標準差覆蓋了 $95.4\%$ ；從平均值向左右延伸3個標準差覆蓋了 $99.7\%$ 。 請參考 @fig-fig7-8 和 @fig-fig7-9 的說明。
 
 
 ```{r}
@@ -526,7 +526,7 @@ ggplot(data = data.frame(x = seq(0, 10, 1)), aes(x)) +
   stat_function(fun = dnorm, n = 1000, args = list(mean = 5, sd = 1), col=blueshade, linewidth=1) +
   stat_function(fun = dnorm, n = 1000, args = list(mean = 5, sd = 2), col=blueshade, linetype=2, linewidth=1) +
   scale_x_continuous(breaks = seq(0, 10, 2)) +
-  ylab("機率密度ty\n") +
+  ylab("機率密度\n") +
   xlab("\n觀察值") +
   theme_classic()
 
